argocd/homelab/infra/traefik-private-mqtt-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-private-mqtt-nodeport
  namespace: kube-system
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-private-kube-system
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-private-kube-system
  ports:
    - name: mqtt
      protocol: TCP
      port: 1883
      targetPort: mqtt
      nodePort: 31883
