argocd/homelab/infra/home-assistant-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant
  namespace: home-assistant
  annotations:
    cert-manager.io/cluster-issuer: compaan-ca
    argocd.argoproj.io/sync-wave: "2"
spec:
  ingressClassName: traefik-private
  tls:
    - hosts:
        - ha.compaan
      secretName: home-assistant-compaan-tls
  rules:
    - host: ha.compaan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home-assistant
                port:
                  number: 8123
